--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ layout: default
 title: Trung Nguyen - Product Designer
 ---
 <h1>Hello! </h1>
+<span>Eat, sleep, exercise, build products & repeat</span>
