add initial layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+---
+layout: layout.html
+site: {
+    "title: Trung Nguyen - Design Engineer",
+    "author": "Trung Nguyen",
+    "year": 2023,
+}
+---
+
+This is content
